# crispy-staging

./: .gitignore  pyproject.toml
api/: app.py  auth.py  routes.py  schemas.py
api/static/: index.html
assets/furniture/: manifest.json
docs/: virtual-staging-system.pdf.py
scripts/: test_reconstruction.py
src/staging/: config.py  models.py  pipeline.py  replicate_staging.py  storage.py  validation.py  worker.py
src/staging/analysis/: classifier.py  fixtures.py  floor.py
src/staging/harmonize/: color.py  composite.py  inpaint.py  quality_gate.py
src/staging/layout/: assets.py  placer.py  templates.py
src/staging/reconstruction/: client.py  fallback.py  quality.py
src/staging/render/: __init__.py  lighting.py  renderer.py  scene.py
tests/: conftest.py  test_models.py  test_pipeline.py  test_pipeline_integration.py  test_storage.py  test_validation.py  test_worker.py
tests/analysis/: test_classifier.py  test_fixtures.py  test_floor.py
tests/api/: test_routes.py
tests/harmonize/: test_color.py  test_composite.py  test_quality_gate.py
tests/layout/: test_assets.py  test_placer.py  test_templates.py
tests/reconstruction/: test_client.py  test_fallback.py  test_quality.py
tests/render/: test_scene.py
